# savitzky-golay-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  data.csv
examples/: basic_usage.rs  benchmark.rs  debug.rs  diag_derivative.rs
examples/consumer_project/: Cargo.toml  data.csv
examples/consumer_project/src/: append_smoothed.rs  main.rs
src/: coefficients.rs  csv_utils.rs  error.rs  filter.rs  lib.rs
tests/: integration_tests.rs
