[package]
name = "sg_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use a path dependency pointing to the local crate under the workspace
savitzky_golay = { path = "../../" }

csv = "1.3"
eframe = "0.32.3"
egui_plot = "0.33.0"

[[bin]]
name = "append_smoothed"
path = "src/append_smoothed.rs"
